--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-/*=============== GOOGLE FONTS ===============*/
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+
 /*=============== VARIABLES CSS ===============*/
 :root {
   --header-height: 3rem;
@@ -14,7 +13,7 @@
   --body-color: #ffffff;
   --container-color: #ffffff;
 
-  --text-color: #A1A1AA;
+  --text-color: #1e1e1e;
   --card-background-color: rgba(255, 255, 255, .015);
   --card-border-color: rgba(255, 255, 255, 0.1);
   --card-box-shadow-1: rgba(0, 0, 0, 0.05);
