--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -18,7 +18,7 @@
 }
 
 a {
-  color: #5a5a5a !important;
+  color: #9c9c9c !important;
   text-decoration: none;
   margin-bottom: 0.5rem;
   transition: color 0.3s ease;
@@ -83,7 +83,7 @@ a:hover{
 }
 
 .footer_item {
-  color: #5a5a5a !important;
+  color: #9c9c9c !important;
   padding: 10px;
   cursor: none;
 }
