--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -52,23 +52,37 @@
   align-items: center;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 30px;
+  grid-gap: 10px; /* Adjust the grid gap to make cards closer */
   transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+  margin-bottom: 100px;
 }
-
 .card__about {
   position: relative;
-  display: flex;
+  display: inline-block;
   justify-content: center;
+  height: 300px;
   cursor: none;
   width: 22em;
-  height: 350px;
   max-width: 80%;
   padding: 10px;
   background: #FFF;
   box-shadow: 0 0 6px 0 rgba(#202024, .12);
   transition: all .35s ease;
 }
+
+.card__about:hover {
+  width: auto; 
+  box-shadow: 0 10px 20px 0 rgba(#202024, .12);
+  height: 500px;
+  /* ... */
+}
+.card__about .img-top {
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 99;
+    }
 
 .card__about::before,
 .card__about::after {
@@ -90,6 +104,7 @@
 
 .card__about::after {
   width: 100%;
+  height: auto;
   background: white;
   transition: width .5s ease;
 }
@@ -98,19 +113,40 @@
   margin-top: 10px;
   color: var(--text-color);
   font-size: 14px;
-  line-height: 1.7;
+  line-height: 1.5;
 }
 
-.card__about:hover {
-  transform: scale(1.1);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  filter: none; /* Remove blur from the hovered card */
-}
 
 .avatar {
-  height:60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80px;
   border-radius: 100%;
   margin-bottom: 1rem;
+  transition: filter 0.3s ease; /* Add transition to create a smooth effect */
+}
+
+
+.card__about .normal-avatar {
+  position: relative;
+  z-index: 1; /* Make sure the normal avatar is above the background */
+}
+
+.card__about .hover-avatar {
+  display: none;
+  position: relative;
+  z-index: 0;
+  filter: blur(4px); /* Apply initial blur to the hover avatar */
+  transition: filter 0.3s ease; /* Add transition to create a smooth effect */
+}
+.card__about:hover .normal-avatar {
+  display: none; /* Hide the normal avatar on hover */
+}
+
+.card__about:hover .hover-avatar {
+  display: inline;
+  filter: none; /* Display the hover avatar on hover */
 }
 
 .lineUp {
@@ -148,7 +184,7 @@
 }
 
 h3 {
-  color: #999;
+  color: #2c2c2c;
   font-weight: 600;
   text-transform: uppercase;
   margin: 0;
@@ -163,7 +199,7 @@ h3 {
 
   p {
     margin: 1.5em 0 0;
-    color: #6E6E70;
+    color: #212121;
     line-height: 1.4em;
   }
 }
@@ -190,7 +226,7 @@ h3 {
   }
 
   .hover_content {
-    max-height: 10em;
+    max-height: 100em;
     transform: none;
   }
 }
