--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,37 +1,53 @@
 /* Header styles */
+.header_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  background: transparent;
+   overflow: visible; /* Just for visualization */
+   backdrop-filter: blur(6px);
+}
+
 .header {
-  background-color: #fff;
-  font-size: 1rem;
-  border-bottom: 1px solid #ccc;
-  font-weight: 500;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #e0e0e0;
+  box-shadow: 2px 2px 15px 4px rgba(0, 0, 0, 0.2);
+  padding: 10px 10px; /* Adjust padding for better spacing */
+  border-radius: 40px;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 20px 20px 60px #bebebe,
+             -20px -20px 60px #ffffff;
+    transform: scaleX(0); /* Initial scale to 0 */
+  transform-origin: center;
+  opacity: 0; /* Set transform origin to left center */
+  transition: transform 0.5s, opacity 0.5s; /* Add transition for the transform property */
 }
-#logo {
-  height: 3rem; /* Set the height as per your requirement */
-  width: 3rem; /* Set the width as per your requirement */
-  mix-blend-mode: darken;
-  position: relative; /* Add position absolute */
+.header_container.loaded .header {
+  transform: scaleX(1); 
+  opacity: 1;/* Scale to full width when the .loaded class is added */
 }
 
-.container {
+.nav_container {
   display: flex;
   align-items: center;
-
+  padding: 5px;
 }
 
 .nav__logo {
-  
   font-weight: bold;
   text-decoration: none;
-  color: #333;
-  margin-right: auto;
-  cursor: none !important;
+  color: #000000;
+  cursor: pointer;
 }
 
 .nav__menu {
   display: flex;
   align-items: center;
-  flex-direction: row; /* Change flex-direction to row */
+  justify-content: center;
+  margin-left: 3rem;
 }
 
 .nav__list {
@@ -39,19 +55,61 @@
   margin: 0;
   padding: 0;
   display: flex;
+
 }
 
 .nav__item {
-  margin-left: 1rem;
-  margin-right: 2rem;
+    margin-left: 4px;
+    position: relative;
+  }
+  
 
-}
 .nav__link {
-  color: #333;
+  color: #272626 !important;
   text-decoration: none;
+  
   display: flex;
   align-items: center;
-  cursor: none !important;
+  cursor: none;
+  transition: color 0.3s;
+  /* Set explicit width and height for consistent sizes */
+  width: 120px;
+  position: relative;
+}
+
+/* Adjust the indicator styles */
+.nav__link::before {
+  content: '';
+  position: absolute;
+  bottom: -23px; /* Reduced the size of the indicator */
+  left: 50%;
+  transform: translateX(-50%);
+  width: 30px; /* Default width of the indicator */
+  height: 3px; /* Reduced the height of the indicator */
+  background-color: #dfe2ea;
+  border-radius: 8px 8px 0 0;
+  opacity: 0;
+  transition: opacity 0.3s, width 0.3s;
+}
+
+/* Adjust the indicator styles for the active link */
+.nav__link.active::before {
+  opacity: 1;
+  background-color: #696969;
+  width: 100%;
+}
+
+/* Media queries for different screen sizes */
+@media (max-width: 768px) {
+  .nav__link::before {
+    width: 100px;
+  }
+}
+
+@media (max-width: 480px) {
+  .nav__link::before {
+    width: 50px;
+  }
 }
 
 .nav__icon {
@@ -62,4 +120,41 @@
   /* Add styles for the close icon, if needed */
 }
 
-/* Add any other styles you may need for responsiveness or specific layout adjustments */
+@keyframes rotate {
+  100% {
+    transform: rotate(0.5turn);
+  }
+}
+
+.rainbow {
+  position: relative;
+  z-index: 0;
+  border-radius: 40px;
+  overflow: hidden;
+  &::before {
+    content: '';
+    position: absolute;
+    z-index: -2;
+    left: -50%;
+    top: -50%;
+    width: 200%;
+    height: 200%;
+    background-color: #edecec;
+    background-repeat: no-repeat;
+    background-size: 50% 50%, 50% 50%;
+    background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+    background-image: linear-gradient(#edecec, #edecec);
+    animation: rotate 4s linear infinite;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    width: calc(100% - 8px);
+    height: calc(100% - 8px);
+    background: white;
+    border-radius: 40px;
+    animation: opacityChange 3s infinite alternate;
+  }
+}
