--- a/src/components/project/Project.css
+++ b/src/components/project/Project.css
@@ -107,6 +107,7 @@ transform: scale(1.01);
   transition: font-size 0.3s ease; 
   font-size: 1rem;
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .dropdown-header:hover {
