--- a/src/components/service/Service.css
+++ b/src/components/service/Service.css
@@ -110,7 +110,7 @@
 
 /* card styling*/
 .serviceContainer {
-  --background-color: #fafafa;
+  --background-color: #ffffff;
   --text-color: #52525b;
   --card-background-color: transparent;
   --card-border-color: rgba(24, 24, 27, 0.08);
@@ -127,14 +127,14 @@
   --card-shine-opacity: 0.3;
   --card-shine-gradient: conic-gradient(
     from 225deg at 50% 50%,
-    rgba(16, 185, 129, 0) 0deg,
-    #10b981 25deg,
-    #edfaf6 285deg,
+    #818181 0deg,
+    #d7d7d7 25deg,
+    #e3e3e3 285deg,
     #ffffff 345deg,
-    rgba(16, 185, 129, 0) 360deg
+    #a3a3a3 360deg
   );
-  --card-line-color: #e9e9e7;
-  --card-tile-color: rgba(0, 0, 0, 0.09);
+  --card-line-color: #d1d1d1;
+  --card-tile-color: #f5f5f5;
 
   --card-hover-border-color: rgba(24, 24, 27, 0.15);
   --card-hover-box-shadow-1: rgba(24, 24, 27, 0.05);
@@ -156,7 +156,8 @@
   grid-gap: 32px;
   position: relative;
   z-index: 1;
-  margin-bottom: 20px;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 .card {
@@ -170,7 +171,7 @@
   border-radius: 15px;
   cursor: pointer;
   position: relative;
-  transition: box-shadow 0.25s;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
 }
 .card::before {
   content: "";
@@ -434,7 +435,8 @@
     0px var(--card-hover-box-shadow-2-y) var(--card-hover-box-shadow-2-blur)
       var(--card-hover-box-shadow-2),
     0 0 0 1px var(--card-hover-border-color);
-    cursor: none;
+  cursor: none;
+  transform: scale(1.1);
 }
 .card:hover .icon::after {
   background-color: var(--card-hover-icon-background-color);
