--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -186,7 +186,7 @@ h4{
   background-color: #2d2d2d;
   border-radius: 50%;
   margin: 0 4px;
-  cursor: pointer;
+  cursor: none;
   transition: background-color 0.3s ease;
 }
 
